<resources>
    <string name="app_name">Calculadora de Resistencias</string>
    <string name="calcular">Calcular valor</string>
    <string-array name="resistencia_valores">
        <item>Negro</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="multiplicador_valores">
        <item>Negro</item>
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>

    <string-array name="tolerancia_valores">
        <item>Marrón</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>

    <string name="banda1">Primer banda</string>
    <string name="banda2">Segunda banda</string>
    <string name="banda3">Tercer banda</string>
    <string name="banda4">Cuarta banda</string>
</resources>