<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f0f0f0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/seagreen"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/logo_peli_imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/codigo_resistencias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banda1"
            android:layout_weight="3"
            android:textColor="@color/seagreen"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <Spinner
            android:id="@+id/spinner_band1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banda2"
            android:layout_weight="2.5"
            android:textColor="@color/seagreen"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <Spinner
            android:id="@+id/spinner_band2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banda3"
            android:layout_weight="3"
            android:textColor="@color/seagreen"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <Spinner
            android:id="@+id/spinner_band3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banda4"
            android:layout_weight="3"
            android:textColor="@color/seagreen"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <Spinner
            android:id="@+id/spinner_band4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="center"
        android:textColor="@color/whitesmoke"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textColor="@color/seagreen"
        android:textStyle="bold"
        android:background="@color/burlywood"/>

</LinearLayout>
